# fifth-tower-server

./: Cargo.toml  README.md
migration/: .env  Cargo.toml
migration/sql/: 01-init-down.sql  01-init-up.sql  02-init-down.sql  02-init-up.sql  03-init-down.sql  03-init-up.sql  04-device-down.sql  04-device-up.sql  05-feed_back-down.sql  05-feed_back-up.sql  06-role-group-down.sql  06-role-group-up.sql  07-user-app-up.sql
migration/src/: lib.rs  m20220101_000001_init.rs  m20220101_000002_init.rs  m20250701_000001_init.rs  m20250702_023420_user_device.rs  m20250704_085511_feed_back.rs  m20250708_085511_role_group.rs  m202508_07_user_app.rs
src/: main.rs
src/api/: config.rs  dict.rs  mod.rs  public.rs
src/api/management/: config.rs  dict.rs  dict_item.rs  group.rs  mod.rs  role.rs  sync_util.rs  user.rs  user_app.rs  user_group.rs  user_role.rs  user_vip_level.rs
src/api/social/: comment.rs  favorite.rs  follow.rs  like.rs  mod.rs  report.rs  score.rs
src/api/user/: auth.rs  mod.rs  user_feed_back.rs
src/config/: app_state.rs  env.rs  mod.rs
src/entity/: commentt.rs  config.rs  dict.rs  dict_item.rs  favorite.rs  follow.rs  group.rs  likee.rs  mod.rs  prelude.rs  role.rs  score.rs  social_report.rs  user.rs  user_app.rs  user_device.rs  user_feed_back.rs  user_group.rs  user_role.rs  user_vip_level.rs
src/service/: comment.rs  config.rs  dict.rs  dict_item.rs  favorite.rs  follow.rs  like.rs  mod.rs  score.rs  social_report.rs  user.rs  user_app.rs  user_device.rs  user_feed_back.rs  user_group.rs  user_role.rs  user_vip_level.rs
src/service/management/: config.rs  dict.rs  dict_item.rs  group.rs  mod.rs  (+6 more)
